--- a/TechJobsPersistent/appsettings.json
+++ b/TechJobsPersistent/appsettings.json
@@ -6,5 +6,9 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+
+  "ConnectionStrings": {
+    "DefaultConnection": "server=localhost;userid=techjobs;password=password;database=techjobs;"
+  }
 }
